examples/test/testpolicy4673.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4673
  namespace: namespace321
spec:
  podSelector:
    matchLabels:
      key6: value15
      key49: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value16
      podSelector:
        matchLabels:
          key7: value14
          key34: value9
          key3: value5
